--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
 # nick-epper-photos
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <title>Nick Esper Photography Productions</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <style>
+    body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;background:#111;color:#eee;text-align:center}
+    header{padding:4rem 1rem 3rem}h1{font-size:3rem;margin:0}p{font-size:1.2rem;margin:.5rem 0 1.5rem}
+    .button{display:inline-block;background:#f5c445;color:#000;padding:.75rem 1.5rem;border-radius:4px;text-decoration:none;font-weight:600}
+    section{padding:3rem 1rem}#social a{margin:0 .75rem;color:#f5c445}
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Nick Esper</h1>
+    <p>Photography Productions</p>
+    <a class="button" href="mailto:esperphotographyproductions@gmail.com">Book Your Session</a>
+  </header>
+
+  <section>
+    <h2>Gallery</h2>
+    <p>Stunning photos—coming soon!</p>
+  </section>
+
+  <section id="social">
+    <a href="https://instagram.com/flicksby_nick_" target="_blank">Instagram</a>
+    <a href="https://tiktok.com/@flicksby_nick_" target="_blank">TikTok</a>
+    <a href="https://facebook.com/flicksby.nick" target="_blank">Facebook</a>
+  </section>
+</body>
+</html>
