--- a/index.html
+++ b/index.html
@@ -31,3 +31,66 @@
   </section>
 </body>
 </html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <title>Nick Esper Photography Productions</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    :root{--gold:#f5c445;--dark:#111;--light:#fafafa}
+    *{box-sizing:border-box;margin:0}
+    body{font-family:'Inter',sans-serif;background:var(--dark);color:var(--light);text-align:center}
+    h1,h2{font-family:'Playfair Display',serif}
+    /* HERO */
+    .hero{height:100vh;background:url("https://source.unsplash.com/random/1600x900/?wedding,photography") center/cover no-repeat;display:flex;align-items:center;justify-content:center;position:relative}
+    .hero::after{content:"";position:absolute;inset:0;background:rgba(0,0,0,.45)}
+    .hero-content{position:relative;z-index:2}
+    .hero h1{font-size:4rem;color:var(--gold)}
+    .hero p{font-size:1.4rem;margin:.5rem 0 2rem}
+    .btn{background:var(--gold);color:var(--dark);padding:.9rem 2.2rem;border-radius:4px;font-weight:600;text-decoration:none;display:inline-block;transition:.25s}
+    .btn:hover{transform:translateY(-3px);box-shadow:0 10px 20px rgba(245,196,69,.35)}
+    /* SECTIONS */
+    section{padding:5rem 1.5rem;max-width:1000px;margin:auto}
+    h2{font-size:2.5rem;margin-bottom:1.2rem;color:var(--gold)}
+    .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:1rem;margin-top:2rem}
+    .gallery img{width:100%;height:250px;object-fit:cover;border-radius:6px}
+    #social a{color:var(--gold);margin:0 .8rem;font-weight:600}
+    footer{font-size:.8rem;padding:2rem 1rem;opacity:.6}
+  </style>
+</head>
+<body>
+  <!-- HERO -->
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Nick Esper</h1>
+      <p>Photography Productions</p>
+      <a class="btn" href="mailto:esperphotographyproductions@gmail.com">Book Your Session</a>
+    </div>
+  </header>
+
+  <!-- GALLERY (placeholder) -->
+  <section>
+    <h2>Gallery</h2>
+    <p>Replace these with your Cloudinary or Unsplash links</p>
+    <div class="gallery">
+      <img src="https://source.unsplash.com/random/600x400?couple" alt="Sample">
+      <img src="https://source.unsplash.com/random/600x400?bride" alt="Sample">
+      <img src="https://source.unsplash.com/random/600x400?wedding" alt="Sample">
+      <img src="https://source.unsplash.com/random/600x400?portrait" alt="Sample">
+    </div>
+  </section>
+
+  <!-- SOCIAL -->
+  <section id="social">
+    <h2>Follow My Work</h2>
+    <a href="https://instagram.com/flicksby_nick_" target="_blank">Instagram</a>
+    <a href="https://tiktok.com/@flicksby_nick_" target="_blank">TikTok</a>
+    <a href="https://facebook.com/flicksby.nick" target="_blank">Facebook</a>
+  </section>
+
+  <footer>© 2025 Nick Esper Photography Productions</footer>
+</body>
+</html>
